ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: nodejs
spec:
  rules:
  - host: webapp.com
    http:
      paths:
      - backend:
              serviceName: "webapp-service"
              servicePort: 4000
